Fixed alignment of words

--- a/illustrations_styles.css
+++ b/illustrations_styles.css
@@ -237,7 +237,7 @@
 }
 
 .plain-img-full-width {
-    margin: 0;
+    margin: 10px 0 0 0;
 }
 
 @media (min-width: 720px) {
